fixed invisible music sheet

--- a/src/app/music-sheet/music-sheet.component.scss
+++ b/src/app/music-sheet/music-sheet.component.scss
@@ -11,12 +11,13 @@
 
 .at-wrap {
     height: 80vh;
-    margin: 0 auto;
+    margin: 10px auto auto auto;
     border: 1px solid rgba(0, 0, 0, 0.12);
     display: flex;
     flex-direction: column;
     overflow: hidden;
     position: relative;
+    background-color: white;
   }
   .at-content {
     position: relative;
@@ -36,6 +37,7 @@
     overflow: hidden;
     border-right: 1px solid rgba(0, 0, 0, 0.12);
     background: #f7f7f7;
+    color: black;
   }
   .at-sidebar:hover {
     max-width: 400px;
